--- a/index.html
+++ b/index.html
@@ -19,38 +19,11 @@
   </head>
   <!--****************************************** BODY  ********************************************-->
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header_top">
-          <div class="header_logo">
-            <a href="./index.html">NovaMett</a>
-            <p>Trouve tes events auto</p>
-          </div>
-          <!--Btn de connexion -->
-          <div class="header_nav">
-            <nav>
-              <ul class="header_liens">
-                <li><a href="index.html">Acceuil</a></li>
-                <li><a href="./pages/events.html">Evenement</a></li>
-                <li><a href="./pages/eventAdd.html">Crée</a></li>
-              </ul>
-            </nav>
-            <!-- Le rendre invisible plus le titre et le p  -->
-
-            <div class="btn_co">
-              <button class="connexion_btn" id="open-login-popup">
-                <img
-                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAj0lEQVR4nNXQQQ7BUBSF4W/UGelc7YgQa5K29oMZXUYtQC0ACzC5Ztr0xYQ/uZP7cv578vhVMuxwQ4c6dqOpsccMBQ6oUgRdBN/MY/eV4JoiqKJ2EeEjyhRBFpIuLpepn7hEg2fMGYux4RItVpjErHHBdszlFvmHtzwkg02auNzHBqchwSMq9zHFfUjwh7wAHuEdJZUq+i0AAAAASUVORK5CYII="
-                  alt="user"
-                />
-
-                Connexion
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+   <app-header 
+    site-name="NovaMett" 
+    tagline="Trouve tes events auto" 
+    logged-in>
+</app-header>
     <!-- ********************************* Header  ****************************************-->
     <main>
       <section class="location">
