modification "server and the logic of the error middleware "

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 
     <!-- JS -->
     <script type="module" src="./assets/scripts/base.js"></script>
-    <script type="module" src="./assets/scripts/action/popup.js"></script>
-    <script type="module" src="./assets/scripts/action/userState.js"></script>
+    <script type="module" src="../assets/scripts/action/action.popups.js"></script>
+    <script type="module" src="../assets/scripts/action/userState.js"></script>
     <script type="module" src="../assets/scripts/api/eventRecentadd.js"></script>
     <script type="module" src="../assets/scripts/api/eventCat.js"></script>
   </body>
